; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_descrip.c_fget_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_descrip.c_fget_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.file = type { i32 }

@FWRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fget_write(%struct.thread* %0, i32 %1, i32* %2, %struct.file** %3) #0 {
  %5 = alloca %struct.thread*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.file**, align 8
  store %struct.thread* %0, %struct.thread** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store %struct.file** %3, %struct.file*** %8, align 8
  %9 = load %struct.thread*, %struct.thread** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.file**, %struct.file*** %8, align 8
  %12 = load i32, i32* @FWRITE, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @_fget(%struct.thread* %9, i32 %10, %struct.file** %11, i32 %12, i32* %13, i32* null)
  ret i32 %14
}

declare dso_local i32 @_fget(%struct.thread*, i32, %struct.file**, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
